--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.todoApp{
+margin: 10px;
+}
+
+body{
+  background-image: linear-gradient(rgb(238, 150, 150),rgb(139, 126, 126));
+  background-repeat: no-repeat;
+  height:100vh;
+}
+
+.formDiv{
+  padding-left: 10px;  
+}
+.name{
+  font-size: 20px;
+  padding-left:10px;
+}
+
+
+.submitButton{
+  padding: 5px;
+  text-align: center;
+
+}
+
+#formId{
+  display: flex;
+  flex-direction: column;
+}
+.dataList{
+  margin-top: 10px;
+  display: grid;
+  gap:5px;
+  grid-template-columns: repeat(3 ,1fr);
+}
+
+.main{
+  border:2px solid black;
+  padding: 10px;
+  font-size: 20px;
+}
+.button{
+  font-size: 15px;
+  padding:5px;
+  width:100px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.date{
+  padding-left:10px;
+  margin-bottom:10px;
+  font-size:20px;
 }
