--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@ padding: 50px;
 body{
   background-image:linear-gradient(#1976d2,#00072d);
   background-repeat: no-repeat;
-  height:100vh;
+  background-attachment: fixed;
+  
 }
 
 .titleHeading{
